map question answered

--- a/blog.html
+++ b/blog.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+    href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet"
+    />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+    />
     <title>Welcome to My Blog!!</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>Welcome to My Blog Page</h1>
+    <h1 class="text-center text-2xl font-bold mt-2">Welcome to My Blog Page</h1>
+    <div class="mt-3">
+        <h1 class="text-2xl ms-2 font-medium">1. Difference between map, filter, forEach, find</h1>
+        <p class="mt-4 ms-2">Answer: map is a method of array which returns a new array with some condintions.</p>
+    </div>
     <!-- js file -->
     <script src="index.js"></script>
 </body>
